<resources>

    <string name="app_name">JournalMap</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">JournalMap</string>
    
    <string name="show_map">Show Map</string>
    <string name="show_gallery">Show Gallery</string>
    <string name="show_home">Home</string>
    <string name="map">Map</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
	<string name="quit">Quit</string>
    <string name="add_loc_pin">Add Location by tapping on map</string>
    <string name="add_loc_gps">Add Location with gps info</string>
	
	
	<string name="img_desc">Place image</string>
	<string name="comment">Comments</string>
	
	<string name="rec_start_button">Record audio note</string>
	<string name="rec_play_button">Play audio note</string>
	<string name="rec_stop_button">Stop audio note</string>
	
	<string name="video_button">Add video note</string>
	<string name="video_play_button">Play video note</string>
	<string name="video_stop_button">Stop video note</string>
	
	<string name="save_button">Save Place</string>
	<string name="view_map">View Map</string>
	<string name="view_photos">View Photos</string>
	<string name="finish">Finish</string>
	
	
	

	
</resources>