<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ShowPlacePic"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/jm_launcher" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/comment" />

    <TextView
        android:id="@+id/showComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/bRecPlayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rec_play_button" />

    <Button
        android:id="@+id/bVideoPlayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_play_button" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/back" />
    </RelativeLayout>

</LinearLayout>