<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:src="@drawable/jm_logo"
        android:contentDescription="@string/title_activity_main" 
        />

    <Button
        android:id="@+id/viewMapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_map" />

    <Button
        android:id="@+id/viewPhotosButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_photos" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bQuitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/quit" />
    </RelativeLayout>

</LinearLayout>