<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp" >

    <ImageView
        android:id="@+id/ivPlacePic"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/jm_launcher" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/comment" />

    <EditText
        android:id="@+id/etComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bRecButton"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:text="@string/rec_button" />

    <Button
        android:id="@+id/bVideoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_button" />

    <Button
        android:id="@+id/bSaveButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/save_button" />

</LinearLayout>